# lms

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
include/lms/: Book.h  Database.h  User.h
scripts/: build.sh
src/: Book.cpp  Database.cpp  User.cpp  main.cpp
